--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,27 @@
 {
-    "builds":[{
-        "src": "django_saludjunin/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    }],
+    "version": 2,
+    "builds":[
+        {
+            "src": "django_saludjunin/wsgi.py",
+            "use": "@vercel/python",
+            "config": { 
+                "maxLambdaSize": "15mb", 
+                "runtime": "python3.9" 
+            }
+        },
+        {
+            "src": "build.sh",
+            "use": "@vercel/static-build",
+            "config": { 
+                "distDir": "staticfiles_build"
+            }
+        }
+    ],
     "routes":[
+        {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
         {
             "src": "/(.*)",
             "dest": "django_saludjunin/wsgi.py"
